# OmegaOS

./: Cargo.toml
.cargo/: config.toml
src/: allocator.rs  cli.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: linked_list.rs
src/fs/: block_device.rs  buffer.rs  file_ops.rs  file_table.rs  mod.rs  superblock.rs
tests/: boot_test.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
